--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@ pre {
 }
 
 body {
+  background: #202020;
+  color: white;
   position: relative;
   min-height: 100%;
   overflow-x: hidden;
@@ -155,7 +157,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: black;
   opacity: 1;
 }
 
@@ -274,7 +276,7 @@ a.blink {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: white;
+  background-color: black;
   opacity: 1;
 }
 
@@ -383,8 +385,8 @@ a.blink {
 }
 
 .content code {
-  color: gainsboro;
-  background-color: black;
+  color: black;
+  background-color: white;
 }
 
 .content blockquote {
@@ -441,7 +443,7 @@ a.blink {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: black;
 }
 
 .content figure.is-expanded img {
@@ -499,7 +501,7 @@ a.blink {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-  background-color: whitesmoke;
+  background-color: black;
   border: 0;
   outline: 0;
 }
@@ -518,7 +520,7 @@ a.blink {
   line-height: inherit;
   text-align: center;
   border: 0;
-  color: white;
+  color: black;
   background-color: blue;
   border-radius: 0.25rem;
   cursor: pointer;
